# taxa-desk

./: .gitignore  LICENSE  PRIVACY.md  README.md  ROADMAP_TAURI_PORTABLE.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  config.yml  feature_request.yml
docs/: installation.md  migration.md  portable-roadmap.md  product-positioning.md  release-checklist.md  status.md  updates.md
scripts/: create-latest-json.mjs  create-portable.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppContent.tsx  AppFrame.tsx  BarPanel.tsx  DeadlineRow.tsx  ErrorBoundary.tsx  FirstRunGuide.tsx  FloatingAssist.tsx  GoalForm.tsx  GoalRows.tsx  ImportPreviewDialog.tsx  InfoTooltip.tsx  MigrationPreviewDialog.tsx  MinimumPresetControl.tsx  MovementDrawer.tsx  MovementTable.tsx  OverviewCard.tsx  ReserveRows.tsx  SectionHeader.tsx  SummaryStrip.tsx  ViewSwitch.tsx
src/components/charts/: CategoryBarList.tsx  ChartModeSelector.tsx  MonthlyCashflowChart.tsx
src/components/fields/: CurrencyField.tsx  CurrencyInput.tsx  Field.tsx  PercentSetting.tsx
src/components/shell/: AppCommandBar.tsx  AppShell.tsx  AppTitleBar.tsx  LocalStatusBar.tsx  NavigationPane.tsx  PageHeader.tsx
src/constants/: categories.ts  helpText.ts
src/hooks/: useAppData.ts  useChartMode.ts  useHashView.ts  useTheme.ts  useToast.ts
src/lib/: aggregations.ts  chartData.ts  db.test.ts  db.ts  deadlines.ts  finance.test.ts  finance.ts  formatters.ts  routing.ts  storage.ts  updates.ts
src/views/: AnalyticsView.tsx  BackupView.tsx  DeadlinesView.tsx  GoalsView.tsx  MovementsView.tsx  OverviewView.tsx  ProfileView.tsx  ReservesView.tsx  SetupView.tsx
(+1 files in other folders)
