[package]
name = "fondi-e-tasse"
version = "0.1.8"
description = "App desktop portable per entrate, tasse e scadenze"
authors = ["Taxa Desk"]
edition = "2021"
default-run = "fondi-e-tasse"

[lib]
name = "fondi_e_tasse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "taxa-desk-updater"
path = "src/bin/taxa-desk-updater.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
minisign-verify = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
